--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/better-sqlite3": "^7.6.8",
+		"autoprefixer": "^10.4.16",
 		"better-sqlite3": "^9.2.2",
 		"colors": "^1.4.0",
+		"crypto-js": "^4.2.0",
 		"openai": "^4.24.1",
-		"sqlite-vss": "^0.1.2"
+		"postcss": "^8.4.33",
+		"sqlite-vss": "^0.1.2",
+		"tailwindcss": "^3.4.0"
 	}
 }
