--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch --threshold error"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0-next.90",
 		"@sveltejs/kit": "^1.0.0-next.587",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
@@ -25,6 +25,7 @@
 		"better-sqlite3": "^9.2.2",
 		"colors": "^1.4.0",
 		"crypto-js": "^4.2.0",
+		"node-color-log": "^11.0.0",
 		"openai": "^4.24.1",
 		"postcss": "^8.4.33",
 		"sqlite-vss": "^0.1.2",
