--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ node_modules
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 src/lib/server/db/*.db
+src/lib/server/db/*.db.backup
 src/lib/server/db/*.db-*
 src/lib/server/db/memo.json
