--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,4 @@ node_modules
 .vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-src/lib/server/db/*.db
-src/lib/server/db/*.db.backup
-src/lib/server/db/*.db-*
-src/lib/server/db/memo.json
+src/lib/server/db/data/
