--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"better-sqlite3": "^9.2.2",
 		"colors": "^1.4.0",
 		"crypto-js": "^4.2.0",
+		"csv-reader": "^1.0.12",
 		"node-color-log": "^11.0.0",
 		"openai": "^4.24.1",
 		"postcss": "^8.4.33",
