--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,14 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": false
+		"strict": false,
+    "paths": {
+      "$lib":    [ "./src/lib" ],
+      "$lib/*":  [ "./src/lib/*" ],
+      "$db":     [ "./src/lib/server/db" ],
+      "$db/*":   [ "./src/lib/server/db/*" ],
+      "$comp":   [ "./src/components" ],
+      "$comp/*": [ "./src/components/*" ],
+    }
 	}
-	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
 }
