--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
 		"colors": "^1.4.0",
 		"crypto-js": "^4.2.0",
 		"csv-reader": "^1.0.12",
+		"hdbscanjs": "^1.0.12",
 		"node-color-log": "^11.0.0",
 		"openai": "^4.24.1",
 		"postcss": "^8.4.33",
 		"sqlite-vss": "^0.1.2",
-		"tailwindcss": "^3.4.0"
+		"tailwindcss": "^3.4.0",
+		"umap-js": "^1.3.3"
 	}
 }
